<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nanem.reminder.SettingAlarmActivity"
    android:background="@color/white">


    <ImageButton
        android:id="@+id/btn_once_date"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_once_time"
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/alarm_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_once_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_once_date"
        android:gravity="center"
        android:textAlignment="textStart"/>

    <ImageButton
        android:id="@+id/btn_once_time"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_once_date" />

    <TextView
        android:id="@+id/tv_once_date"
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/alarm_time"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_once_date"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textAlignment="textStart"/>

    <EditText
        android:id="@+id/edt_once_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/alarm_message"
        android:inputType="text"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btn_once_time"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_set_once_alarm"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_one_time_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_once_message" />

    <Button
        android:id="@+id/btn_cancel_repeating_alarm"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_once_message" />


</androidx.constraintlayout.widget.ConstraintLayout>